feat: update site font and color palette
- Also removes unused files and add tailwind helpers

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 95
+  "printWidth": 95,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/app/globals.css"
 }
