--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "clsx": "^2.1.1",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
     "eslint-config-prettier": "^10.1.8",
@@ -29,6 +30,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
