--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
